--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-cmd": "^3.0.0",
     "nodegit": "^0.20.3",
     "pug": "2.0.0-beta11",
+    "rimraf": "^2.6.2",
     "serve-favicon": "~2.4.5",
     "uuid": "^3.1.0"
   }
