Added botui, speechkitt ui improvements, and moved to karen dialogflow.

--- a/main_server/package.json
+++ b/main_server/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "apiai": "^4.0.3",
     "body-parser": "~1.18.2",
+    "botui": "^0.3.4",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "morgan": "~1.9.0",
     "node-cmd": "^3.0.0",
     "nodegit": "^0.20.3",
+    "opn": "^5.1.0",
     "pug": "2.0.0-beta11",
     "rimraf": "^2.6.2",
     "serve-favicon": "~2.4.5",
