--- a/main_server/package.json
+++ b/main_server/package.json
@@ -10,7 +10,7 @@
     "body-parser": "~1.18.2",
     "botui": "^0.3.4",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
+    "debug": "^2.6.9",
     "express": "~4.15.5",
     "morgan": "~1.9.0",
     "node-cmd": "^3.0.0",
